fix project cards alignment

--- a/styles.css
+++ b/styles.css
@@ -179,6 +179,7 @@ h3 {
   padding: 6rem 4rem;
   gap: 3rem;
   justify-content: center;
+  align-items: center;
 }
 
 .project {
